--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  height: 100vh;
 }
 
 .App-header {
@@ -17,7 +18,12 @@
   justify-content: center;
   align-content: center;
   flex-direction: row;
-  width: 90%;
-  margin: 15% auto;
+  width: 700px;
+  margin: 5% auto;
   justify-content: space-between;
+  background-color: aquamarine;
+}
+
+#root {
+  background-image: linear-gradient(141deg, #9fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
 }
