updated UI to show/hide button depending on button

--- a/src/Message.css
+++ b/src/Message.css
@@ -1,7 +1,15 @@
 .msgContainer {
-  display: flex;
   align-content: center;
   justify-content: center;
+  height: 20px;
+}
+
+.hide {
+  visibility: hidden;
+}
+
+.show {
+  visibility: visible;
 }
 
 .msg {
